--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -18,4 +18,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Run tests
-      run: sbt compile
+      run: |
+        cp $JAVA_HOME/lib/tools.jar lib
+        sbt compile
