--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Get latest release version number
+        id: get_version
+        uses: battila7/get-version-action@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         env:
-          VERSION: ${{ github.ref }}
+          VERSION: ${{ steps.get_version.outputs.version-without-v }}
         run: |
           cp $JAVA_HOME/lib/tools.jar lib
           sbt assembly
@@ -35,8 +38,9 @@ jobs:
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ASSET_NAME:  appcrawler2-${{ steps.get_version.outputs.version-without-v }}.jar
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./target/appcrawler-${{ github.ref }}.jar
-          asset_name: appcrawler-${{ github.ref }}.jar
+          asset_path: ./target/$ASSET_NAME
+          asset_name: $ASSET_NAME
           asset_content_type: application/java-archive
