--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,9 +38,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ASSET_NAME:  appcrawler2-${{ steps.get_version.outputs.version-without-v }}.jar
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./target/${{ ASSET_NAME }}
-          asset_name: ${{ ASSET_NAME }}
+          asset_path: ./target/appcrawler2-${{ steps.get_version.outputs.version-without-v }}.jar
+          asset_name: appcrawler2-${{ steps.get_version.outputs.version-without-v }}.jar
           asset_content_type: application/java-archive
