--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,8 @@ jobs:
         env:
           VERSION: ${{ steps.get_version.outputs.version-without-v }}
         run: |
-          cp $JAVA_HOME/lib/tools.jar lib
-          sbt assembly
-          ls target
+          ./gradlew shadowJar
+          ls  build/libs
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -41,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./target/appcrawler2-${{ steps.get_version.outputs.version-without-v }}.jar
+          asset_path: ./build/libs/appcrawler2-all.jar
           asset_name: appcrawler2-${{ steps.get_version.outputs.version-without-v }}.jar
           asset_content_type: application/java-archive
