--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -19,5 +19,4 @@ jobs:
         java-version: 1.8
     - name: Run tests
       run: |
-        cp $JAVA_HOME/lib/tools.jar lib
-        sbt compile
+        ./gradlew compileScala
