--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ xueqiu.json
 .DS_Store
 .java-version
 lib/tools.jar
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
+node_modules
+output
+*.ipa
